# autoProposal

./: .editorconfig  .env.example  .gitignore  DOCKER.md  README.md  autoproposal_제안서자동프로그램_작업내역최종_20260510_v3.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  db_maria.py  db_mongo.py  deps.py  errors.py  security.py
apps/api/app/models/: __init__.py  ai_setting.py  artifact.py  audit.py  category.py  collaboration.py  llm_log.py  notification.py  project.py  user.py
apps/api/app/routers/: admin.py  artifacts.py  auth.py  backup.py  categories.py  collaboration.py  files.py  generate.py  llm.py  notifications.py  projects.py  settings.py  users.py
apps/api/app/services/: analysis.py  artifact_editor.py  artifact_preview.py  backup.py  file_parser.py  jobs.py  key_resolver.py  notify.py  pptx_builder.py  proposal_generator.py  xlsx_builder.py
apps/api/app/services/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  openai_client.py
apps/api/tests/: conftest.py  out_proposal.pptx  proposal.pptx  smoke.py  smoke_admin.py  smoke_artifact_preview.py  smoke_backup.py  smoke_clone.py  smoke_collaboration.py  smoke_i18n.py  smoke_inline_edit.py  smoke_jobs.py  smoke_listings.py  smoke_llm.py  smoke_notifications.py  smoke_preview.py  smoke_profile.py  smoke_settings.py  smoke_trash.py  wbs.xlsx
apps/api/tests/unit/: test_artifact_editor.py  test_artifact_preview.py  test_backup.py  test_file_parser.py  test_pptx_builder.py  test_security.py
(+92 files in other folders)
