[project]
name = "lon-api"
version = "0.1.0"
description = "Lon — AI 사업제안서 자동 생성기 BE (FastAPI)"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
  # web
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",

  # db
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "cryptography>=42",
  "pymongo>=4.7",

  # llm
  "openai>=1.40",
  "google-genai>=0.3",
  "anthropic>=0.34",

  # parsing / output
  "pdfminer.six>=20240706",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "openpyxl>=3.1",
  "markdown-it-py>=3.0",

  # security / scheduling
  "keyring>=25",
  "passlib[bcrypt]>=1.7",
  "pyjwt>=2.8",
  "apscheduler>=3.10",

  # utils
  "httpx>=0.27",
  "tenacity>=8.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
